<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context="de.wackernagel.android.example.sidekick.TypefaceTextViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <de.wackernagel.android.sidekick.widgets.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/text_description"/>

        <de.wackernagel.android.sidekick.widgets.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/text_black"
            app:typeface="roboto_black"/>

        <de.wackernagel.android.sidekick.widgets.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/text_bold"
            app:typeface="roboto_bold"/>

        <de.wackernagel.android.sidekick.widgets.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/text_italic"
            app:typeface="roboto_italic"/>

        <de.wackernagel.android.sidekick.widgets.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/text_light"
            app:typeface="roboto_light"/>

        <de.wackernagel.android.sidekick.widgets.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/text_medium"
            app:typeface="roboto_medium"/>

        <de.wackernagel.android.sidekick.widgets.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/text_regular"
            app:typeface="roboto_regular"/>

        <de.wackernagel.android.sidekick.widgets.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/text_thin"
            app:typeface="roboto_thin"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_thin_code"/>

    </LinearLayout>
</ScrollView>