<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.wackernagel.android.sidekickshowcase.TooltipActivity">

    <TextView
        android:layout_gravity="top|start"
        android:text="@string/tooltip_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text"
        android:text="@string/tooltip_long"
        android:contentDescription="@string/tooltip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="?attr/selectableItemBackground"
        android:layout_marginTop="24dp"
        android:layout_gravity="top|center_horizontal"/>

    <TextView
        android:id="@+id/text1"
        android:text="@string/tooltip_long"
        android:contentDescription="@string/tooltip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="?attr/selectableItemBackground"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="bottom|end"
        android:contentDescription="@null"/>

    <Button
        android:id="@+id/button"
        android:text="@string/tooltip_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"/>

</FrameLayout>
