<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.wackernagel.android.example.sidekick.RevealViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <de.wackernagel.android.sidekick.widgets.CircularRevealView
            android:id="@+id/circularReveal"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:saveEnabled="true"
            app:backgroundColor="@color/sidekick_text_error"
            app:state="unrevealed"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/reveal_reveal"/>

            <Button
                android:id="@+id/buttonRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/sidekick_text_error"
                android:text="@string/reveal_red"/>

            <Button
                android:id="@+id/buttonGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/sidekick_icon"
                android:text="@string/reveal_gray"/>

        </LinearLayout>

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"/>

    </LinearLayout>
</ScrollView>